# vortex

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  engine_roadmap.md  game_engine_roadmap.md  level1.scene.json
engine/: CMakeLists.txt
engine/anim/: CMakeLists.txt  README.md
engine/anim/include/vortex/anim/: clip.hpp  curve.hpp  graph.hpp  pose.hpp  skeleton.hpp  state_machine.hpp
engine/anim/src/: clip.cpp  curve.cpp  graph.cpp  pose.cpp  skeleton.cpp  state_machine.cpp
engine/app/: CMakeLists.txt  README.md
engine/app/include/vortex/app/: app.hpp  model_loader.hpp  plugin.hpp  scene_manager.hpp
engine/app/src/: app.cpp  model_loader.cpp  scene_manager.cpp
engine/asset/: CMakeLists.txt  README.md
engine/asset/src/: asset_manager.cpp  cooked_texture.cpp  gltf.cpp  http.cpp  http.hpp  image.cpp  tiled.cpp
engine/audio/: CMakeLists.txt  README.md
engine/audio/src/miniaudio/: ma_audio.cpp
engine/core/: CMakeLists.txt  README.md  version.hpp.in
engine/core/include/vortex/core/: json.hpp  (+9 more)
engine/core/src/: console.cpp  diagnostics.cpp  frame_allocator.cpp  json.cpp  log.cpp  profiler.cpp  settings.cpp
engine/debug/: CMakeLists.txt  README.md
engine/debug/shaders/: imgui.frag  imgui.vert
engine/debug/src/: debug_draw.cpp  debug_plugin.cpp  imgui_layer.cpp  inspector.cpp  perf_overlay.cpp
engine/ecs/: CMakeLists.txt  README.md
engine/ecs/src/: serialize.cpp  systems.cpp
engine/jobs/: CMakeLists.txt  README.md
engine/jobs/src/: job_system.cpp
engine/physics/: CMakeLists.txt  README.md
engine/physics/src/: components.cpp
engine/physics/src/box2d/: physics_world.cpp
engine/platform/: CMakeLists.txt  README.md
engine/platform/src/glfw/: glfw_input.cpp  glfw_window.cpp  glfw_window.hpp
engine/platform/src/native/: input_map.cpp  native_clock.cpp  native_dynamic_library.cpp  native_filesystem.cpp
engine/renderer/: CMakeLists.txt  README.md
engine/renderer/shaders/: blit.frag  blur.frag  bright.frag  composite.frag  decal.frag  decal.vert  deferred.frag  fullscreen.vert  fxaa.frag  gbuffer.frag  line3d.frag  line3d.vert  mesh.frag  mesh.vert  mesh2d.frag  mesh2d.vert  motion_blur.frag  shadow.frag  shadow.vert  skybox.frag  skybox.vert  sprite.frag  sprite.vert  ssao.frag  ssao_blur.frag  tonemap.frag  volumetric.frag
engine/renderer/src/: atlas.cpp  camera_controller.cpp  gizmos3d.cpp  lighting2d.cpp  mesh.cpp  mesh2d.cpp  particles.cpp  pathfinding.cpp  post_process.cpp  render_graph.cpp  skinning.cpp  sprite_animation.cpp  sprite_batch.cpp  tilemap.cpp
engine/rhi/: CMakeLists.txt  README.md
engine/rhi/src/: rhi_factory.cpp
engine/rhi/src/vulkan/: vk_command_list.cpp  vk_command_list.hpp  vk_common.hpp  vk_device.cpp  vk_device.hpp  vk_resources.hpp  vk_surface.cpp  vk_surface.hpp  vk_swapchain.cpp  vk_swapchain.hpp  vk_vma.cpp
engine/rhi/src/webgpu/: wgpu_command_list.cpp  wgpu_command_list.hpp  wgpu_common.hpp  wgpu_device.cpp  wgpu_device.hpp  wgpu_resources.hpp  wgpu_surface.cpp
engine/text/: CMakeLists.txt  README.md
engine/text/src/: font.cpp  text_renderer.cpp
engine/ui/: CMakeLists.txt  README.md
engine/ui/src/: ui.cpp
examples/: CMakeLists.txt
examples/alien_cake_addict/: README.md  main.cpp
examples/anim_state/: README.md  main.cpp
examples/animated/: README.md  main.cpp
examples/animated/shaders/: animated.frag  animated.vert
examples/app_empty/: README.md  main.cpp
examples/app_plugin/: README.md  main.cpp
examples/app_settings/: README.md  main.cpp
examples/assets/: README.md  main.cpp
examples/assets_demo/: README.md  fallback.pal  main.cpp
examples/async_tasks/: README.md  main.cpp
examples/atlas/: README.md  main.cpp
examples/audio_demo/: README.md  main.cpp
examples/benchmark/: README.md  main.cpp
examples/bloom2d/: README.md  main.cpp
examples/breakout/: README.md  main.cpp
examples/camera3d/: README.md  main.cpp
examples/camera_rig/: README.md  main.cpp
examples/debug/: README.md  main.cpp
examples/diagnostics/: README.md  main.cpp
examples/ecs/: README.md  main.cpp
examples/ecs_features/: README.md  main.cpp
examples/game/: README.md  main.cpp
examples/game_menu/: README.md  main.cpp
examples/gizmos3d/: README.md  main.cpp
examples/hello/: README.md  main.cpp
examples/hotreload/: README.md  game.cpp  game_api.h  host.cpp
examples/input/: README.md  main.cpp
examples/inspector/: README.md  main.cpp
examples/instancing/: README.md  main.cpp
examples/instancing/shaders/: instancing.vert
examples/math_primitives/: README.md  main.cpp
examples/mesh2d/: README.md  main.cpp
examples/mesh3d/: README.md  main.cpp
examples/mesh_picking/: README.md  main.cpp
examples/mt_record/: README.md  main.cpp
examples/mt_record/shaders/: mt.vert
examples/particles/: README.md  main.cpp
examples/pathfinding/: README.md  main.cpp
examples/physics/: README.md  main.cpp
examples/physics_app/: README.md  main.cpp
examples/picking/: README.md  main.cpp
examples/picking_debug/: README.md  main.cpp
examples/rendergraph/: README.md  main.cpp
examples/rendergraph/shaders/: post.frag  post.vert
examples/scene_viewer/: README.md  main.cpp
examples/scenes/: README.md  main.cpp
examples/shader_defs/: README.md  main.cpp
examples/shader_defs/shaders/: effect.frag  fullscreen.vert
examples/skinned/: README.md  main.cpp
examples/sprite2d/: README.md  main.cpp
examples/sprites/: README.md  main.cpp
examples/text/: README.md  main.cpp
examples/threaded/: README.md  main.cpp
examples/tiled/: README.md  level.tmj  main.cpp
examples/tilemap/: README.md  main.cpp
examples/transform_gizmo/: README.md  main.cpp
examples/triangle/: README.md  main.cpp
examples/triangle/shaders/: triangle.frag  triangle.vert
examples/ui/: README.md  main.cpp
examples/ui_anim/: README.md  main.cpp
examples/window/: README.md  main.cpp
games/farm_rpg/: CMakeLists.txt  README.md
games/farm_rpg/src/: assets.cpp  assets.hpp  farm.cpp  farm.hpp  hud.cpp  hud.hpp  main.cpp  player.cpp  player.hpp  save.cpp  save.hpp  world.cpp  world.hpp
(+196 files in other folders)
